tests/fixtures/invalid/min_bytes_int.py
# Cannot call min() with Bytes, Int
x = min(b"hello", 1)
